# Weather-Forecast

./: CMakeLists.txt  README.md  cfg.json  key.txt  main.cpp
lib/: CMakeLists.txt
lib/APIParser/: APIParser.cpp  APIParser.h
lib/ConfigParser/: ConfigParser.cpp  ConfigParser.h
lib/ConsolePrinter/: ConsolePrinter.cpp  ConsolePrinter.h
lib/WeatherParser/: WeatherParser.cpp  WeatherParser.h
